--- a/src/app/episode/episodes/episodes.component.html
+++ b/src/app/episode/episodes/episodes.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="episodes.length > 0">
   <div *ngFor="let episode of episodes">
-    {{episode.id}} {{episode.name}} <a [routerLink]="['/episodes', episode.id]">Edit</a>
+    {{episode.id}} {{episode.name}} <a [routerLink]="['/episodes', episode.id]">View</a>
   </div>
 </div>
